--- a/index.html
+++ b/index.html
@@ -9,11 +9,15 @@
   <body>
     <div class="card-pizza">
       <h2 class="card-title">Pizza Nucbera</h2>
-      <p id="card-parap"></p>
-      <input type="number" id="pizza-select" min="0" max="10">
-      <button>Enviar</button>
-      <h3 id="card-pizza-select"></h3>
-      <img src="" alt="" id="img-pizza">
+      <p id="card-parap">Selecciona un numero</p>
+      <div class="input-group">
+        <input type="number" id="pizza-select" min="0" max="10">
+        <button id="button">Enviar</button>
+      </div>
+      <div class="pizza-group">
+        <h3 id="card-pizza-select"></h3>
+        <img src="" alt="" id="img-pizza">
+      </div>
     </div>
     <script src="const.js"></script>
     <script src="main.js"></script>
